--- a/media.css
+++ b/media.css
@@ -4,7 +4,11 @@
 }
 .menu {
   margin: 10% auto;
-  display: block;
+  display: flex;
+  position: fixed;
+  z-index: 1;
+  flex-grow: 1;
+  justify-content: space-around;
 }
 .menu button {
   border: none;
