--- a/1proto.css
+++ b/1proto.css
@@ -3,21 +3,24 @@
   z-index: 1;
 }
 .menu {
-  margin: 10% auto;
+  margin: 10vw 5vh;
   display: block;
+  width: 50vw;
   position: absolute;
 }
 .menu button {
   border: none;
   margin: 1%;
   padding: 2%;
+  width: 5vw;
+  height: 6vw;
 }
 .overlay {
   position: fixed;
   z-index: 2;
-  width: 88vw;
-  height: 85vh;
-  margin: 1vw auto;
+  width: 85vw;
+  height: 90vh;
+  margin: 1vw 2vw;
   padding: 5%;
   border-radius: 1vw;
   /* background-color: Ivory; */
